# openenclave-extra-samples

./: README.md
proprietary_secure_channel/: CMakeLists.txt  Makefile  README.md
proprietary_secure_channel/common/: CMakeLists.txt  attestation.cpp  attestation.h  crypto.cpp  crypto.h  dispatcher.cpp  dispatcher.h  log.h
proprietary_secure_channel/enclave_a/: Makefile  ecalls.cpp
proprietary_secure_channel/enclave_b/: Makefile  ecalls.cpp
proprietary_secure_channel/host/: CMakeLists.txt  Makefile  host.cpp
tls_upload_encrypted_data/: Makefile  README.md
tls_upload_encrypted_data/common/: common.h  tls_server_enc_pubkey.h
tls_upload_encrypted_data/non_enc_client/: Makefile  client.cpp  identity_verifier.cpp  verify_callback.cpp
tls_upload_encrypted_data/server/enc/: Makefile  private.pem  public.pem  server.cpp
tls_upload_encrypted_data/tls_between_non_enclave_enclave/: cert.der
